feat: enhance footer component with dynamic content and social links - introduce footerTitle and footerContact objects for cleaner text management - implement socialLinks array for dynamic rendering of social media icons - refactor contact details and social links for improved maintainability and readability

--- a/src/styles/scss/_contact.scss
+++ b/src/styles/scss/_contact.scss
@@ -90,3 +90,14 @@
     //   transform: translateY(12%) translateX(-2%);
     // }
   }
+
+
+.contact__paragraph strong {
+  cursor: pointer; 
+  display: block;
+  transition: 0.35s; 
+  
+  &:hover {
+    color: #fff !important;
+  }
+}
