--- a/src/styles/scss/_products.scss
+++ b/src/styles/scss/_products.scss
@@ -42,9 +42,22 @@
   background-position: center;
   background-repeat: no-repeat;
 
-//   &:hover {
-//     transform: scale(1.02);
-//   }
+  .product__hover-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 0.4s ease;
+    z-index: 1;
+    pointer-events: none;
+  }
+
+  &:hover .product__hover-image {
+    opacity: 1;
+  }
 
   &--1 {
     background-image: url('/shop/01.png');
