--- a/src/styles/scss/_works.scss
+++ b/src/styles/scss/_works.scss
@@ -89,8 +89,29 @@
   &:hover .name {
     opacity: 1;
   }
-  
-  img { 
+
+  .work__image {
+    position: fixed;
+    right: 8%;
+    width: auto;
+    height: auto;
+    max-width: 35vw;
+    max-height: 60vh;
+    object-fit: contain;
+    aspect-ratio: auto;
+    opacity: 0;
+    z-index: 1;
+    pointer-events: none;
+    transition: opacity 0.6s cubic-bezier(0.4, 0, 0.2, 1), transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+    filter: drop-shadow(0 20px 50px rgba(0, 0, 0, 0.3));
+    will-change: transform, opacity;
+  }
+
+  &:hover .work__image {
+    opacity: 1;
+  }
+
+  img:not(.work__image) { 
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -98,3 +119,4 @@
     transition-timing-function: ease-in-out;
   }
 }
+
