feat: enhance About section styles for improved layout and responsiveness - update alignment and gap settings for better visual balance on larger screens - add transform effect for odd child elements to enhance dynamic presentation

--- a/src/styles/scss/_about.scss
+++ b/src/styles/scss/_about.scss
@@ -37,8 +37,8 @@
   padding-top: 10vh; 
 
     @media (min-width: $change-layout) {
-      align-items: flex-end;
-      gap: 0;
+      align-items: center;
+      gap: 4rem;
     }
 }
 
@@ -46,9 +46,14 @@
   position: relative; 
   width: fit-content; 
 
+  &:nth-child(odd) {
+    @media (min-width: $change-layout) {
+      transform: translateX(75%);
+    }
+  }
   &:nth-child(even) {
     @media (min-width: $change-layout) {
-      transform: translateX(-100%);
+      transform: translateX(-50%);
     }
   }
 
