feat: comment out logo section in Work component for future adjustments - temporarily disable logo display for potential redesign - maintain structure for easy reactivation when needed

--- a/src/components/sections/Work.astro
+++ b/src/components/sections/Work.astro
@@ -35,9 +35,9 @@ const {
 ---
 
 <section id="work" class="works">  
-  <div class="logo logo--vertical">
+  <!-- <div class="logo logo--vertical">
     <img src="/logo-hot-lava-gradient.svg" alt="Hot Lava">
-  </div>
+  </div> -->
   <div class="wrapper">
     <div class="container works__container">
       <h3 class="title">
