--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,19 @@ import '../styles/global.scss';
   <div class="modal">
     <div class="modal__close js-close">
       <div class="ui-close"></div>
-    </div> 
+    </div>
+    <div class="modal__content">
+      <div class="modal__video-container">
+        <iframe 
+          id="work-video" 
+          class="modal__video"
+          src=""
+          frameborder="0" 
+          allow="autoplay; fullscreen; picture-in-picture" 
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
   </div>
 
   <Header />
