--- a/src/styles/scss/_modal.scss
+++ b/src/styles/scss/_modal.scss
@@ -79,3 +79,27 @@
     transform: rotate(-45deg);
   }
 }
+
+.modal__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+}
+
+.modal__video-container {
+  width: 100%;
+  max-width: 90vw;
+  max-height: 90vh;
+  aspect-ratio: 16 / 9;
+  position: relative;
+}
+
+.modal__video {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 8px;
+}
