--- a/src/styles/scss/_works.scss
+++ b/src/styles/scss/_works.scss
@@ -111,6 +111,11 @@
     opacity: 1;
   }
 
+  // Items without video show image at 50% opacity
+  &:not(.js-work--has-video):hover .work__image {
+    opacity: 0.25;
+  }
+
   img:not(.work__image) { 
     width: 100%;
     height: 100%;
