--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,22 @@ import '../styles/global.scss';
           allow="autoplay; fullscreen; picture-in-picture" 
           allowfullscreen
         ></iframe>
+        
+        <div class="vimeo-player__overlay">
+          <div class="vimeo-player__title" id="work-video-title"></div>
+          
+          <div class="vimeo-player__controls">
+            <button class="vimeo-player__play-pause" id="work-video-play-pause">PLAY</button>
+            
+            <div class="vimeo-player__progress-container">
+              <div class="vimeo-player__progress-track">
+                <div class="vimeo-player__progress-bar" id="work-video-progress"></div>
+              </div>
+            </div>
+            
+            <div class="vimeo-player__time" id="work-video-time">0:00 / 0:00</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -53,6 +69,8 @@ import '../styles/global.scss';
     import '../scripts/main.js';
     import '../scripts/smoke.js';
   </script>
+  
+  <script src="https://player.vimeo.com/api/player.js"></script>
 
 </BaseLayout>
 
