feat: update modal styles to include font settings for Vimeo player elements - add font-family to title, play/pause, and time elements for consistent typography - enhance visual coherence across modal components

--- a/src/styles/scss/_modal.scss
+++ b/src/styles/scss/_modal.scss
@@ -123,6 +123,7 @@
 }
 
 .vimeo-player__title {
+  font-family: $main-font-title;
   font-size: clamp(24px, 3vw, 36px);
   font-weight: 900;
   color: #fff;
@@ -143,6 +144,7 @@
 }
 
 .vimeo-player__play-pause {
+  font-family: $main-font;
   background: transparent;
   border: 2px solid #fff;
   color: #fff;
@@ -182,6 +184,7 @@
 }
 
 .vimeo-player__time {
+  font-family: $main-font;
   font-size: 14px;
   color: #fff;
   font-weight: 400;
