feat: update Work component to comment out parallax initialization for future adjustments

--- a/src/components/sections/Work.astro
+++ b/src/components/sections/Work.astro
@@ -85,11 +85,11 @@ const {
 </section>
 
 <script>
-  import { initParallax } from '../../scripts/utils/parallax.js';
+  // import { initParallax } from '../../scripts/utils/parallax.js';
 
-  initParallax('.works .logo', {
-    speed: 1  
-  });
+  // initParallax('.works .logo', {
+  //   speed: 1  
+  // });
 
   // Position work images vertically aligned with their corresponding text
   function positionWorkImages() {
