--- a/src/styles/scss/_products.scss
+++ b/src/styles/scss/_products.scss
@@ -8,15 +8,15 @@
 
 .products__grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
-  gap: 7rem;
+  gap: 0rem;
   
   width: 100%;
   min-height: unset;
   padding: 0 0 50vh 0;
   
-  max-width: 1200px;
+  max-width: 1400px;
 
   @media (min-width: $change-layout) {
     padding: 0 0 75vh 0;
@@ -60,6 +60,7 @@
     opacity: 1;
   }
  
+  // Fila 1: Producto en col 1, vacío en col 2, Producto en col 3
   &--1 {
     grid-column: 1;
     grid-row: 1;
@@ -68,37 +69,85 @@
   }
 
   &--2 {
+    grid-column: 3;
+    grid-row: 1;
+    background-image: url('/shop/02.png');
+    background-color: #FFB347;
+  }
+
+  // Fila 2: Vacío en col 1, Producto en col 2, vacío en col 3
+  &--3 {
     grid-column: 2;
     grid-row: 2;
-    background-image: url('/shop/02.png');
-    background-color: #FF6B35;
-  }
- 
-  &--3 {
-    grid-column: 1;
-    grid-row: 3;
     background-image: url('/shop/03.png');
     background-color: #FF6B35;
   }
- 
 
-  &--5 {
-    grid-column: 2;
-    grid-row: 4;
-    background-image: url('/shop/05.png');
-    background-color: #A8D5E2;
-  }
- 
+  // Fila 3: Producto en col 1, vacío en col 2, Producto en col 3
   &--4 {
-    grid-column: 2;
-    grid-row: 6;
+    grid-column: 1;
+    grid-row: 3;
     background-image: url('/shop/04.png');
     background-color: #FFB347;
   }
 
+  &--5 {
+    grid-column: 3;
+    grid-row: 3;
+    background-image: url('/shop/05.png');
+    background-color: #A8D5E2;
+  }
+
+  // Fila 4: Vacío en col 1, Producto en col 2, vacío en col 3
   &--6 {
+    grid-column: 2;
+    grid-row: 4;
+    background-image: url('/shop/06.png');
+    background-color: #FFB347;
+  }
+
+  // Fila 5: Producto en col 1, vacío en col 2, Producto en col 3
+  &--7 {
     grid-column: 1;
     grid-row: 5;
+    background-image: url('/shop/01.png');
+    background-color: #A8D5E2;
+  }
+
+  &--8 {
+    grid-column: 3;
+    grid-row: 5;
+    background-image: url('/shop/02.png');
+    background-color: #FFB347;
+  }
+
+  // Fila 6: Vacío en col 1, Producto en col 2, vacío en col 3
+  &--9 {
+    grid-column: 2;
+    grid-row: 6;
+    background-image: url('/shop/03.png');
+    background-color: #FF6B35;
+  }
+
+  // Fila 7: Producto en col 1, vacío en col 2, Producto en col 3
+  &--10 {
+    grid-column: 1;
+    grid-row: 7;
+    background-image: url('/shop/04.png');
+    background-color: #FFB347;
+  }
+
+  &--11 {
+    grid-column: 3;
+    grid-row: 7;
+    background-image: url('/shop/05.png');
+    background-color: #A8D5E2;
+  }
+
+  // Fila 8: Vacío en col 1, Producto en col 2, vacío en col 3
+  &--12 {
+    grid-column: 2;
+    grid-row: 8;
     background-image: url('/shop/06.png');
     background-color: #FFB347;
   }
@@ -127,6 +176,9 @@
   
   opacity: 1;
   transform: translateY(0);
+
+  opacity: 0;
+  transform: translateY(10px);
   transition: opacity 0.3s ease, transform 0.3s ease;
   pointer-events: none;
   z-index: 2;
@@ -147,6 +199,7 @@
   z-index: 2;
 }
 
+.product__card:hover .product__name,
 .product__card:hover .product__view-text {
   opacity: 1;
   transform: translateY(0);
