--- a/src/styles/scss/_products.scss
+++ b/src/styles/scss/_products.scss
@@ -72,17 +72,15 @@
 
   &--2 {
     grid-column: 2;
-    grid-row: 3;
-    margin-top: -2vh; // More space before
-    margin-bottom: 10vh; // Overlaps with next
+    grid-row: 1; 
     background-image: url('/shop/02.png');
     background-color: #FFB347;
   }
 
   &--3 {
     grid-column: 3;
-    grid-row: 2;
-    margin-top: -10vh; // Overlaps with previous
+    grid-row: 1;
+    margin-top: -10vh;  
     margin-bottom: 5vh; // More space after
 
     background-image: url('/shop/03.png');
@@ -91,7 +89,7 @@
 
   &--4 {
     grid-column: 1;
-    grid-row: 4;
+    grid-row: 2;
     margin-top: -2vh; // Overlaps with previous
     margin-bottom: 10vh; // More space after
     background-image: url('/shop/04.png');
@@ -99,8 +97,8 @@
   }
 
   &--5 {
-    grid-column: 3;
-    grid-row: 5;
+    grid-column: 2;
+    grid-row: 2;
     margin-top: -8vh; // Overlaps with previous
     margin-bottom: -18vh; // Overlaps with next
     background-image: url('/shop/05.png');
@@ -108,8 +106,8 @@
   }
 
   &--6 {
-    grid-column: 2;
-    grid-row: 6;
+    grid-column: 3;
+    grid-row: 2;
     margin-top: -5vh; // Overlaps with previous
     margin-bottom: 12vh; // More space after
     background-image: url('/shop/06.png');
@@ -118,7 +116,7 @@
 
   &--7 {
     grid-column: 1;
-    grid-row: 7;
+    grid-row: 3;
     margin-top: 6vh; // More space before
     margin-bottom: -22vh; // Overlaps with next
     background-image: url('/shop/01.png');
@@ -126,8 +124,8 @@
   }
 
   &--8 {
-    grid-column: 3;
-    grid-row: 8;
+    grid-column: 2;
+    grid-row: 3;
     margin-top: -15vh; // Overlaps with previous
     margin-bottom: 8vh; // More space after
     background-image: url('/shop/02.png');
@@ -135,8 +133,8 @@
   }
 
   &--9 {
-    grid-column: 2;
-    grid-row: 9;
+    grid-column: 3;
+    grid-row: 3;
     margin-top: -10vh; // Overlaps with previous
     margin-bottom: -16vh; // Overlaps with next
     background-image: url('/shop/03.png');
@@ -145,7 +143,7 @@
 
   &--10 {
     grid-column: 1;
-    grid-row: 10;
+    grid-row: 4;
     margin-top: -8vh; // Overlaps with previous
     margin-bottom: 15vh; // More space after
     background-image: url('/shop/04.png');
@@ -153,8 +151,8 @@
   }
 
   &--11 {
-    grid-column: 3;
-    grid-row: 11;
+    grid-column: 2;
+    grid-row: 4;
     margin-top: -15vh; // More space before
     margin-bottom: 0vh; // Overlaps with next
     background-image: url('/shop/05.png');
@@ -162,8 +160,8 @@
   }
 
   &--12 {
-    grid-column: 2;
-    grid-row: 12;
+    grid-column: 3;
+    grid-row: 4;
     margin-top: -12vh; // Overlaps with previous
     margin-bottom: 0;
     background-image: url('/shop/06.png');
@@ -184,11 +182,11 @@
 
 .product__name {
   position: absolute;
-  // bottom: 2.75rem;
-  // left: 2rem;
+  bottom: 2.75rem;
+  left: 2rem;
 
-  bottom: -2rem;
-  left:0rem;
+  // bottom: -2rem;
+  // left:0rem;
 
   font-size: clamp(18px, 2.5vw, 28px);
   font-weight: 900;
@@ -196,10 +194,10 @@
   color: #000;
   text-align: left;
   
-  opacity: 1;
-  transform: translateY(0);
+  // opacity: 1;
+  // transform: translateY(0);
 
-  // opacity: 0;
+  opacity: 0;
   transform: translateY(10px);
   transition: opacity 0.3s ease, transform 0.3s ease;
   pointer-events: none;
@@ -226,7 +224,7 @@
   }
 }
 
-// .product__card:hover .product__name,
+.product__card:hover .product__name,
 .product__card:hover .product__view-text {
   opacity: 1;
   transform: translateY(0);
@@ -235,4 +233,7 @@
 .product__card--dark .product__name,
 .product__card--dark .product__view-text {
   color: #fff;
+}
+.product__card {
+  margin: 0 !important;
 }
