--- a/src/styles/scss/_hero.scss
+++ b/src/styles/scss/_hero.scss
@@ -1,10 +1,13 @@
 @use './vars' as *;
 
 .hero {
-  height: 100svh;
-  min-height: 1080px;
+  height: 100svh; 
   width: 100vw;   
   overflow: hidden; 
+
+  @media (min-width: $change-layout) { 
+    min-height: 1080px;
+  }
 
   .video, video {   
     z-index: 1;    
@@ -13,34 +16,37 @@
 
   .video { 
     position: absolute;
-    top: 50%;
+    top: 35%;
     right: 0;
     transform: translate(0, -50%);
     
     width: 100%;
-    max-width: 60vw;
+    max-width: 90vw;
     height: auto;
-    aspect-ratio: 16 / 9;
+    aspect-ratio: 2 / 3;
     overflow: hidden;
+
+    @media (min-width: $change-layout) {
+      top: 50%;
+      bottom: unset;
+      max-width: 70vw;
+      aspect-ratio: 16 / 9;
+    }
 
 
     img {
       width: 100%;
     }
 
-    video {
-      // position: absolute;
-      // left: unset;
-      // right: 0;
-      // top: 0;
-      // bottom: 0;
-      transform: scale(1.1) translateY(-1%) translateX(10%);
+    video {  
       margin: auto;
-
-      width: 100%;
+      width: 200%;
+      @media (min-width: $change-layout) {
+        transform: scale(1.1) translateY(-1%) translateX(10%);
+        width: 100%;
+      }
     }
   }
- 
 
   &__title {
     position: absolute;
@@ -110,10 +116,17 @@
 
   .logo { 
     position: absolute;
-    bottom: 7.5%;
-    left: 5vw;
-    width: 40vw;
+    bottom: 18%;
     z-index: 10;
+    left: 0;
+    width: 95%;
+
+    @media (min-width: $change-layout) {
+      left: 5vw;
+      width: 40vw;
+      top: unset;
+      bottom: 7.5%;
+    }
 
     img, svg {
       width: 100%;
