--- a/src/styles/scss/_html.scss
+++ b/src/styles/scss/_html.scss
@@ -7,7 +7,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%; 
-  // overflow-x: hidden;
+  overflow-x: hidden;
 
   font-family: var(--font-main), sans-serif;
   color: $color-white;
@@ -83,7 +83,11 @@ h1 {
 }
 
 h3 {  
-  margin-bottom: 4rem !important;
+  margin-bottom: 2rem !important;
+
+  @media (min-width: $change-layout) {
+    margin-bottom: 4rem !important;
+  }
 }
 
 h4 { 
