--- a/src/styles/scss/_main.scss
+++ b/src/styles/scss/_main.scss
@@ -6,7 +6,7 @@
 
 .wrapper {
   position: relative;
-  width: min(90%, var(--wrapper));
+  width: min(calc(100% - 3rem), var(--wrapper));
   margin: 0 auto;
 
   @media (min-width: $change-layout) {
@@ -82,6 +82,11 @@
 }
 
 .title {
-  font-size: clamp(40px, 5vw, 80px);
+  font-size: clamp(36px, 5vw, 80px);
   line-height: 1;
+
+  @media (max-width: ($change-layout - 1px)) {
+    width: 90%;
+    margin: 0 auto;
+  }
 }
