style: update background color in Products section for enhanced aesthetics

--- a/src/styles/scss/_products.scss
+++ b/src/styles/scss/_products.scss
@@ -90,7 +90,7 @@
     // grid-column: 1;
     // grid-row: 2; 
     background-image: url('/shop/04.png');
-    background-color: #FF6B35;
+    background-color: #f74a20;
   }
 
   &--5 {
