--- a/src/components/Copyright.astro
+++ b/src/components/Copyright.astro
@@ -15,6 +15,9 @@
   import gsap from "gsap";
   import ScrollTrigger from "gsap/dist/ScrollTrigger";
 
+  // Register ScrollTrigger plugin
+  gsap.registerPlugin(ScrollTrigger);
+
   // Copyright animation
   const copyright = document.querySelector(".copyright__text");
   if (copyright) {
